--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,23 @@ checkpoints/
 my_model.keras
 my_dir
 datasets
+UCF101_subset
+fonts_extracted
+titanic.tfsnap
+fonts.zip
+heart.csv
+Metro_Interstate_Traffic_Volume.csv.gz
+mnist.npz
+test.keras
+train.csv
+stack_overflow_16k.tar.gz
+translator
+penguins
+cats_and_dogs_extracted
+cats_and_dogs.zip
+logs
+mnist
+training_checkpoints
+imdb_reviews
+bin.tf
+
