--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,5 @@ credit_card_transactions.csv
 esc-50.zip
 mini_speech_commands.zip
 miaow_16k.wav
+jena_climate_2009_2016.csv.zip
+jena_climate_2009_2016.csv
