--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,5 @@ mini_speech_commands.zip
 miaow_16k.wav
 jena_climate_2009_2016.csv.zip
 jena_climate_2009_2016.csv
+iris_test.csv
+iris_training.csv
